<resources>
    <string name="app_package_name">com.example.nutrihanjum</string>

    <string name="app_name">영양한줌</string>
    <string name="home">홈</string>
    <string name="diary">식단일지</string>
    <string name="chatbot">챗봇상담</string>
    <string name="news">영양뉴스</string>
    <string name="user">마이페이지</string>

    <string name="report_email">richpinkr99@gmail.com</string>
    <string name="report_content">게시글 신고</string>
    <string name="report_comment">댓글 신고</string>
    <string name="report_result_success">신고가 정상적으로 접수되었습니다.</string>
    <string name="report_result_fail">신고가 접수되지 않았습니다.</string>
    <string name="selected_post_null">게시글이 존재하지 않습니다.</string>

    <string name="home_category">영양한줌</string>
    <string name="diary_category">식단일지</string>
    <string name="chatbot_category">챗봇상담</string>
    <string name="news_category">영양뉴스</string>
    <string name="user_category">마이페이지</string>

    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="save">저장</string>
    <string name="popup_report">신고하기</string>
    <string name="notification">알림</string>
    <string name="read_more_word">더보기</string>
    <string name="read_more">...</string>
    <string name="recommend">추천</string>
    <string name="count">개</string>
    <string name="you">님</string>

    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="check">확인</string>
    <string name="cancel">취소</string>

    <string name="profile_edit">프로필 수정</string>
    <string name="action_edit">수정하기</string>
    <string name="reset">재설정</string>

    <string name="age">나이</string>
    <string name="gender">성별</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="unknown">(알수없음)</string>

    <string name="saved_post">저장한 글</string>
    <string name="my_post">내 게시글</string>
    <string name="anmt">공지사항</string>
    <string name="faq">자주 묻는 질문</string>
    <string name="question">1:1 문의</string>

    <string name="news_detail">기사</string>

    <string name="total_calorie_day">총 하루 열량</string>
    <string name="decimal_hint">0.0</string>
    <string name="calorie_unit">kcal</string>
    <string name="carbohydrate">탄수화물</string>
    <string name="nutrition_unit">g</string>
    <string name="protein">단백질</string>
    <string name="fat">지방</string>
    <string name="btn_nutrition_set">저장</string>
    <string name="btn_nutrition_cancel">취소</string>

    <string name="google_login">구글로 로그인</string>
    <string name="login_not_filled">이메일과 비밀번호를 입력해주세요</string>
    <string name="login_failed">이메일 혹은 비밀번호가 틀렸습니다.</string>
    <string name="re_auth_failed">비밀번호가 틀렸습니다.</string>
    <string name="logout_failed">로그아웃에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="login_btn">로그인</string>
    <string name="logout_btn">로그아웃</string>

    <string name="login_nickname_hint">이름 / 닉네임을 입력해주세요</string>
    <string name="login_email_hint">이메일 주소를 입력해주세요</string>
    <string name="prev_password_hint">지금 사용 중인 비밀번호를 입력해주세요</string>
    <string name="login_password_hint">영문, 숫자, 특수문자를 적어도 하나씩 조합 8~16자</string>
    <string name="login_password_check_hint">비밀번호를 다시 입력해주세요</string>

    <string name="web_client_id">913031910028-prr8utnrelive27pj4klm795ek1lm86n.apps.googleusercontent.com</string>

    <string name="add_diary">추가하기</string>
    <string name="title_add_diary">작성하기</string>
    <string name="modify_diary">수정하기</string>
    <string name="request_login">로그인</string>
    <string name="reqeust_logout">로그아웃</string>
    <string name="request_withdrawal">회원탈퇴</string>

    <string name="diary_menu">식사 메뉴</string>
    <string name="diary_hashtag">해시태그</string>
    <string name="diary_meal_time">식사 시간</string>
    <string name="diary_public_option">공개여부</string>
    <string name="diary_memo">메모</string>

    <string name="meal_time_breakfast">아침</string>
    <string name="meal_time_lunch">점심</string>
    <string name="meal_time_dinner">저녁</string>
    <string name="meal_time_snack">간식</string>
    <string name="meal_time_midnight_snack">야식</string>

    <string name="notice_favorite">님이 당신의 일지를 좋아합니다.</string>
    <string name="notice_comment">님이 당신의 일지에 댓글을 남겼습니다.</string>

    <string name="msg_mealtime_not_selected">식사를 언제 했는지 입력해주세요</string>
    <string name="msg_photo_not_selected">식단 사진을 올려주세요</string>

    <string name="failed_to_upload">잠시 후에 다시 시도해주세요</string>

    <string name="popup_delete_check">해당 글을 삭제하시겠습니까?</string>
    <string name="popup_report_check">해당 글을 신고하시겠습니까?</string>
    <string name="comment_empty">댓글을 입력해주세요</string>

    <string name="popup_delete">삭제하기</string>
    <string name="popup_modify">수정하기</string>
    <string name="diary_popup_public">비공개</string>
    <string name="login_email">이메일</string>

    <string name="prev_password">기존 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="login_password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>

    <string name="time_just_now">방금 전</string>
    <string name="time_minute_before">분 전</string>
    <string name="time_hour_before">시간 전</string>
    <string name="time_day_before">일 전</string>
    <string name="time_month_before">달 전</string>
    <string name="time_year_before">년 전</string>
    <string name="msg_sign_up">이메일로 회원가입</string>
    <string name="msg_find_password">비밀번호 찾기</string>

    <string name="kakaotalk">카카오톡</string>
    <string name="naver">네이버</string>
    <string name="google">구글</string>

    <string name="nick_name">이름 / 닉네임</string>
    <string name="request_sign_up">회원가입</string>
    <string name="signup_not_filled">아직 입력이 완료되지 않았어요</string>
    <string name="signup_failed">가입에 실패했어요. 잠시 후에 다시 시도해주세요</string>
    <string name="email_collision">이미 사용 중인 이메일입니다</string>
    <string name="update_password_failed">인터넷 연결을 확인 후 잠시 후 다시 시도해주세요</string>
    <string name="update_password_succeed">비밀번호가 변경되었습니다.</string>
    <string name="update_profile">프로필 수정</string>
    <string name="network_failed">연결이 불안정합니다. 잠시 후 다시 시도해주세요</string>

    <string name="setting">설정</string>
    <string name="user_setting">사용자 설정</string>
    <string name="notification_setting">푸시 알림 설정</string>
    <string name="etc">기타</string>
    <string name="launguage_setting">언어 설정</string>
    <string name="late_version_update">최신버전 업데이트</string>
    <string name="warning_password_check">탈퇴 시 모든 정보가 삭제되고 되돌릴 수 없습니다. 정말 탈퇴하시겠습니까?</string>
    <string name="warning_forgot_password">해당 계정의 이메일로 비밀번호 재설정 메일을 보내드립니다.</string>
    <string name="send_email">전송</string>
    <string name="send_email_fail">잘못된 이메일입니다.</string>

    <string name="chat_bot_hint">키워드를 입력해보세요</string>
    <string name="chat_empty_input">내용을 입력해주세요</string>
    <string name="edittext_food_name_hint">메뉴를 입력해주세요.</string>

    <string name="default_notification_channel_id">927born</string>
    <string name="channel_name">PN</string>
    <string name="channel_description">PushNotification</string>
    <string name="edittext_memo_hint">내용을 입력해주세요.</string>
    <string name="hash_tag_hint">#해쉬태그를 입력해주세요.</string>
    <string name="textview_chat_bot_start">대화하기</string>

    <string name="korean">한국어</string>
    <string name="current_version">1.0</string>

    <string name="kakao_provider_key">KAKAO</string>
    <string name="kakao_channel_url">_NMuDK</string>
    <string name="kakao_app_key">2f3850b999815f9941cc44f7c047a2c6</string>
    <string name="kakaotalk_packagename">com.kakao.talk</string>
    <string name="kakaotalk_login_failed">카카오톡 연동에 실패하였습니다.</string>

    <string name="naver_provider_key">NAVER</string>
    <string name="naver_client_id">mxrQwyd6MdXhiw6vOWPX</string>
    <string name="naver_client_secret">sGExIUfD7b</string>
    <string name="naver_login_failed">네이버 연동에 실패하였습니다.</string>

    <string name="age_not_selected">나이 미상</string>

    <string-array name="age_range">
        <item>선택안함</item>
        <item>1세 이하</item>
        <item>1–2세</item>
        <item>3–5세</item>
        <item>6–8세</item>
        <item>9–11세</item>
        <item>12–14세</item>
        <item>15–18세</item>
        <item>19–29세</item>
        <item>30–49세</item>
        <item>50–64세</item>
        <item>65–74세</item>
        <item>75세 이상</item>
    </string-array>

</resources>