<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home"/>
    <item
        android:id="@+id/action_diary"
        android:icon="@drawable/ic_diary"
        android:enabled="true"
        android:title="@string/diary"/>
    <item
        android:id="@+id/action_chatbot"
        android:icon="@drawable/ic_chatbot"
        android:enabled="true"
        android:title="@string/chatbot"/>
    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_news"
        android:enabled="true"
        android:title="@string/news"/>
    <item
        android:id="@+id/action_user"
        android:icon="@drawable/ic_user"
        android:enabled="true"
        android:title="@string/user"/>
</menu>