<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.SettingActivity">

    <RelativeLayout
        android:id="@+id/settingActivity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/settingActivity_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/apple_gothic_neo_b"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:gravity="center_vertical"
                android:text="@string/user_setting"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/btn_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:gravity="center_vertical"
                android:text="@string/profile_edit"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/apple_gothic_neo_r"
                    android:gravity="center_vertical"
                    android:text="@string/notification_setting"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>

            <LinearLayout
                android:background="@color/colorDivision"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="10dp">
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:gravity="center_vertical"
                android:text="@string/etc"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <RelativeLayout
                android:id="@+id/btn_launguage_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/apple_gothic_neo_r"
                    android:gravity="center_vertical"
                    android:text="@string/launguage_setting"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/launguage_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/apple_gothic_neo_r"
                    android:gravity="center_vertical"
                    android:text="@string/korean"
                    android:textColor="@color/orange"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_late_version"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/apple_gothic_neo_r"
                    android:gravity="center_vertical"
                    android:text="@string/late_version_update"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/version_texview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/apple_gothic_neo_r"
                    android:gravity="center_vertical"
                    android:text="@string/current_version"
                    android:textColor="@color/orange"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/btn_request_logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:gravity="center_vertical"
                android:text="@string/reqeust_logout"
                android:textColor="@color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/btn_request_withdrawal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:gravity="center_vertical"
                android:text="@string/request_withdrawal"
                android:textColor="@color/black"
                android:textSize="14sp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>