<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/box_rounded_white"
    android:layout_marginHorizontal="20dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:layout_marginStart="4dp"
                android:text="@string/prev_password"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edittext_prev_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:hint="@string/prev_password_hint"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:layout_marginStart="4dp"
                android:text="@string/new_password"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edittext_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:layout_marginStart="4dp"
                android:text="@string/password_check"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edittext_check_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:hint="@string/login_password_check_hint"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_set_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/btn_cancel_set_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/btn_nutrition_cancel"/>

            <LinearLayout
                android:id="@+id/btn_popup_division"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="7dp"
                android:background="@color/colorDivision"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/btn_set_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:text="@string/btn_nutrition_set"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/orange"
            app:trackColor="@android:color/transparent"
            android:indeterminate="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>