<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/box_rounded_white"
    android:layout_marginHorizontal="20dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:text="@string/warning_forgot_password"
            android:fontFamily="@font/apple_gothic_neo_b"
            android:paddingHorizontal="25dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:text="@string/login_email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/edittext_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/gray"
                android:fontFamily="@font/apple_gothic_neo_r"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/btn_cancel_send_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:gravity="center"
                android:text="@string/btn_nutrition_cancel"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="7dp"
                android:background="@color/colorDivision"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:id="@+id/btn_send_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/apple_gothic_neo_b"
                android:gravity="center"
                android:text="@string/send_email"
                android:textColor="@color/red"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorColor="@color/orange"
            app:trackColor="@android:color/transparent"
            android:indeterminate="true"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>